force-app/main/default/objects/sfcma__BillingPushNotification__c/sfcma__BillingPushNotification__c.object-meta.xml
<CustomObject>
    <description>Contains raw Stripe data. Salesforce uses this data to populate object records in the Checkout Management App, like subscriptions and invoices.</description>
    <label>Checkout Billing Push Notification</label>
    <nameField>
        <displayFormat>BPN-{000000}</displayFormat>
        <label>Checkout Billing Push Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Billing Push Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>