force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>