force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__EventContent__c.field-meta.xml
<CustomField>
    <fullName>sfcma__EventContent__c</fullName>
    <label>Event Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>