force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__EventType__c.field-meta.xml
<CustomField>
    <fullName>sfcma__EventType__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>