force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__LiveMode__c.field-meta.xml
<CustomField>
    <fullName>sfcma__LiveMode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used as a flag for Stripe test webhooks.</description>
    <label>Live Mode</label>
    <type>Checkbox</type>
</CustomField>