force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__Retries__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Retries__c</fullName>
    <label>Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>