force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__StripeEventId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeEventId__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Event Id (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>