force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__StripeEventIdUnique__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeEventIdUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Event Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>