force-app/main/default/objects/sfcma__BillingPushNotification__c/fields/sfcma__Subscription__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>sfcma__Subscription__c</referenceTo>
    <relationshipLabel>Billing Push Notifications</relationshipLabel>
    <relationshipName>BillingPushNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>